[package]
name = "hello"
version = "0.1.0"
edition = "2021"
description = "Simple CRUD app using clap 4 with zabbix-api-rs framework"
license = "Apache-2.0"
homepage = "https://loco.rs/"
documentation = "https://docs.rs/loco-rs"
authors = ["T.J. Yang <tjyang2001@gmail.com>"]
repository = "https://github.com/LearnZabbix/zabbix-api-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = { version = "4.4.13", feactures = ["color","error-context","help","std","suggestions","usage","cargo","debug","deprecated","derive","env","string","unicode","unstable-doc","unstable-styles","unstable-v5","wrap_help"],optional = true}
clap = { version = "4.4.18", default-features = false, features = ["std", "help","cargo","derive"] }
zabbix-api = "0.1.0"

