[package]
name = "zbxc"
version = "0.1.0"
edition = "2021"
description = "zbbix cli in Rust using zabbix-api-rs framework"
license = "Apache-2.0"
homepage = "https://loco.rs/"
documentation = "https://docs.rs/zabbix-api/"
authors = ["https://github.com/LearnZabbix/zbxc"]
repository = "https://github.com/LearnZabbix/zbxc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = { version = "4.4.13", feactures = ["color","error-context","help","std","suggestions","usage","cargo","debug","deprecated","derive","env","string","unicode","unstable-doc","unstable-styles","unstable-v5","wrap_help"],optional = true}
clap = { version = "4.4.18", default-features = false, features = ["std", "help","cargo","derive"] }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
# using master branch
zabbix-api = { git = "https://github.com/lebe-dev/zabbix-api-rs.git" }
#zabbix-api = "0.1.0"

